[package]
name = "cf-env"
version = "0.1.9"
edition = "2021"
description = "Crate to parse Cloud Foundry environment variables with types and checks. Get you off that boilerplate code and care about what you actually need to code"
license = "MIT OR Apache-2.0"
keywords = ["cloudfoundry", "cf", "cf-for-k8s", "CloudFoundry"]
categories = ["config", "web-programming", "accessibility"]
homepage = "https://github.com/somehowchris/cf-env-rs"
repository = "https://github.com/somehowchris/cf-env-rs"
documentation = "https://docs.rs/cf-env"
exclude = [".github", ".gitpod.yml"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"
guid-create = { version="0.3.1", features = [
    "serde",
] }
http = "1.0.0"
locale-types = "0.4.0"
